feat(job-search): expand catalog and filters to cover 17+ IT specializations, remote filters, and verified direct links